revert to use a different jre image